<?xml version="1.0"?>
<package format="3">
  <name>kondo_ics_servo_driver</name>
  <version>0.1.0</version>
  <description>ROS2ドライバーノード：ICSプロトコル対応KONDOサーボの制御を行うノード</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
